# devcon-template

./: REAEME.md  Taskfile.yml  mise.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: Taskfile.yml
back/: .env.sample  .gitignore  .importlinter  Dockerfile  README.md  Taskfile.yml  pyproject.toml
back/app/: main.py
back/app/routers/: llm.py
back/app/schemas/: schemas.py
back/app/services/: vertex_ai.py
back/app/utils/: env_manager.py  errors.py  exceptions.py  logger.py
back/tests/: test_my_package.py
front/: .gitignore  Dockerfile  biome.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
front/app/: entry.server.tsx
front/app/routes/: llm.ts
front/app/utils/: logger.server.ts
